--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,12 +41,12 @@ dependencies:
   plugin_platform_interface: ^2.1.5
   url_launcher: ^6.2.1
   provider: ^6.1.1
-  slider_button: ^2.0.0
   http: ^1.1.2
   walletconnect_dart: ^0.0.11
   web3dart: ^2.3.5
   supabase_flutter: ^1.6.2
   flutter_dotenv: ^5.0.4
+  web3modal_flutter: ^3.0.1
 
 dev_dependencies:
   flutter_test:
